--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="ejercicio_2">Escribir externa</string>
     <string name="ejercicio_3">Leer ficheros</string>
     <string name="ejercicio_4">Codificación</string>
+    <string name="ejercicio_5">Exploración</string>
     <string name="operando_1">Operando 1</string>
     <string name="operando_2">Operando 2</string>
     <string name="mas">+</string>
